@@ -20,12 +20,13 @@ dnl # +1 :  0 :  0   == removed/changed an interface. Breaks old apps.
 dnl #  ? : +1 :  ?   == internal changes that doesn't break anything.
 dnl #
 dnl # CURRENT : REVISION : AGE
-YAHOO2_CURRENT=5	# 1 - < 0.6
+YAHOO2_CURRENT=6	# 1 - < 0.6
 			# 2 - pre utf8 (0.6.2)
 			# 3 - pre webcam/chat support (0.6.3)
 			# 4 - 0.7.0
 			# 5 - 0.7.1-2 - yahoo_init_with_attributes
-YAHOO2_REVISION=3
+			# 6 - yahoo_get_log_level()
+YAHOO2_REVISION=4
 YAHOO2_AGE=0
 YAHOO2_VERSION="$YAHOO2_CURRENT:$YAHOO2_REVISION:$YAHOO2_AGE"
 AC_SUBST(YAHOO2_VERSION)
